@@ -17,6 +17,9 @@ Avro 1.7.0 (unreleased)
 
   BUG FIXES
 
+    AVRO-1045. Java: Fix a bug in GenericData#deepCopy() of ByteBuffer values.
+    (cutting)
+
 Avro 1.6.3 (5 March 2012)
 
   IMPROVEMENTS
